--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "primeicons": "^7.0.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue-spinner": "^1.0.4"
+    "vue-spinner": "^1.0.4",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue-toastify": "^2.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
